refactor: 무승부 경우 생성